# Rebecca

./: LICENSE  README.md  README.pt-br.md  REBECCA.rar  pyproject.toml
REBECCA/REBECCA/: ApiKey.py  RAG  RAG.py  RebeccaMain.py  ResetMem.py  memoria.json  trabalhandoMem.py
REBECCA/REBECCA/__pycache__/: RAG
RebeccaMain/: ApiKey.py  RebeccaMain.py  ResetMem.py  memoria.json
