[project]
name = "rebecca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "edge-tts>=7.2.7",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.11",
    "langchain-classic>=1.0.2",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "pathlib>=1.0.1",
    "playsound==1.2.2",
    "pymupdf>=1.27.2",
    "sounddevice>=0.5.5",
    "vosk>=0.3.45",
]
